Fix contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -86,6 +86,7 @@ section {
     background-color: rgba(0, 0, 0, 0.5);
     margin: 0;
     padding: 1rem;
+    color: var(--accent2-color);
 }
 
 .hero article {
